fixed footer position on mobile

--- a/redesign-project/src/styles.scss
+++ b/redesign-project/src/styles.scss
@@ -69,10 +69,12 @@ body {
 
     .footer {
         width: 35px;
+        position: absolute;
+        margin-top: -55px;
     }
 
     .footer__insta {
-        margin-left: 15px;
+        margin-left: 55px;
     }
 
     .footer__fb {
